--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Permanent Marker', cursive;
+    /* font-family 'Tino', serif;*/
+    font-family: 'Tinos', serif;
     color: #f4f4f4;
     margin-top: 0;
     margin-bottom: 0.5em;
@@ -13,7 +14,7 @@ h6 {
 
 /* Base Styles for Paragraphs */
 p {
-    font-family: 'Patrick Hand', cursive;
+    font-family: 'Tino', serif;
     color: #f4f4f4;
     font-size: 1rem;
     line-height: 1.6;
@@ -45,7 +46,7 @@ p {
 
 /* Page Background */
 body {
-    background-color: #2d2d2d;
+    background-color: #7a7a7a;
     color: #f4f4f4;
     font-family: 'Patrick Hand', cursive;
     margin: 0;
